# MSP_configurator

./: .gitignore  CMakeLists.txt  README.md  set_aux_cli.sh  set_aux_cli_robust.sh
src/: config_manager.cpp  config_manager.h  drone_interface.cpp  drone_interface.h  main.cpp  msp_connection.cpp  msp_connection.h  msp_protocol.cpp  msp_protocol.h
